package com.sda.patterns.behavioral.observer.ex2;

// listener
public interface CarAddedListener {

    void onCarAdded(Car car);
}
